Scroll to start item on load if exists

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             padding-left: 80px;
             padding-right: 80px;
         }
+
+        .is-active {
+            background: red;
+        }
     </style>
 </head>
 <body>
@@ -69,6 +73,17 @@
 
 <div class="wrapper" data-swipr-wrapper>
     <div class="items items3" data-swipr>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item is-active" data-swipr-start></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
